<resources>
    <string name="app_name">OSH</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_door_open">Door Open</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="mqtt_host">MQTT Host</string>
    <string name="mqtt_settings">MQTT</string>
    <string name="mqtt_port">MQTT Port</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="settings">Settings</string>
    <string name="mqtt_port_key">mqtt_port_key</string>
    <string name="mqtt_host_key">mqtt_host_key</string>
    <string name="db_host">db_host</string>
    <string name="db_port">db_port</string>
    <string name="db_name">db_name</string>
    <string name="db_username">db_username</string>
    <string name="db_password">db_password</string>
    <string name="area_last_tab">area_last_tab</string>
    <string name="main_last_nav">main_last_nav</string>
    <string name="title_lights">Lights</string>
    <string name="title_area">Area</string>
    <string name="area_last_overlay">area_last_overlay</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mqtt_client_id_key">mqtt_client_id</string>
    <string name="mqtt_client_id">Client ID</string>
    <string name="sip_settings">Sip Settings</string>
    <string name="sip_host_key">sip_host_key</string>
    <string name="sip_host">Host</string>
    <string name="sip_port_key">sip_port_key</string>
    <string name="sip_port">Port</string>
    <string name="sip_realm_key">sip_realm_key</string>
    <string name="sip_realm_id">Realm</string>
    <string name="sip_username">Username</string>
    <string name="sip_username_key">sip_username_key</string>
    <string name="sip_password_key">sip_password_key</string>
    <string name="sip_password">Password</string>
    <string name="user_id_key">user_id_key</string>
    <string name="user_id">User ID</string>
    <string name="user_settings">User Settings</string>
    <string name="camera_settings">Camera Settings</string>
    <string name="camera_stream_url">Stream URI</string>
    <string name="title_activity_camera_details">Front Door Camera</string>
    <string name="tab_camera_stream">Camera Stream</string>
    <string name="tab_pic_surveillance">Surveillance</string>
    <string name="tab_ring_surveillance">Door Ring</string>
    <string name="title_activity_sip_call">Call</string>
    <string name="camera_id">Camera ID</string>
    <string name="camera1_settings">Front Door</string>
    <string name="camera1_id_key">camera_id_key</string>
    <string name="camera1_stream_uri_key">camera_stream_uri_key</string>
    <string name="camera1_ftp_id_key">camera_ftp_id_key</string>
    <string name="camera1_ftp_host_key">camera_ftp_host_key</string>
    <string name="camera1_ftp_username_key">camera_ftp_username_key</string>
    <string name="camera1_ftp_password_key">camera_ftp_password_key</string>
    <string name="camera1_ftp_remote_dir_key">camera_ftp_remote_dir_key</string>
    <string name="camera2_settings">Wintergarden</string>
    <string name="camera2_id_key">camera2_id_key</string>
    <string name="camera2_stream_uri_key">camera2_stream_uri_key</string>
    <string name="camera2_ftp_id_key">camera2_ftp_id_key</string>
    <string name="camera2_ftp_host_key">camera2_ftp_host_key</string>
    <string name="camera2_ftp_username_key">camera2_ftp_username_key</string>
    <string name="camera2_ftp_password_key">camera2_ftp_password_key</string>
    <string name="camera2_ftp_remote_dir_key">camera2_ftp_remote_dir_key</string>
    <string name="camera_ftp_host">FTP Host</string>
    <string name="camera_ftp_username">FTP Username</string>
    <string name="camera_ftp_password">FTP Password</string>
    <string name="camera_ftp_remote_dir">FTP Remote Dir</string>
    <string name="title_wbb12">WBB12</string>
    <string name="grafana_settings">Grafana</string>
    <string name="grafana_wbb12_url">WBB12 URL</string>
    <string name="grafana_wbb12_url_key">grafana_wbb12_url_key</string>
    <string name="sip_ring_volume_key">sip_ring_volume_key</string>
    <string name="sip_ring_volume">Ring Volume</string>
    <string name="title_activity_call">CallActivity</string>
    <string name="exitapp">Exit</string>
    <string name="grafana_energy_url_key">grafana_energy_url_key</string>
    <string name="grafana_energy_url">Energy URL</string>
    <string name="grafana_water_url_key">grafana_water_url_key</string>
    <string name="grafana_water_url">Water URL</string>
    <string name="fronius_settings">Fronius</string>
    <string name="fronius_inverter_url_key">fronius_inverter_url_key</string>
    <string name="fronius_inverter_url">Inverter URL</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_sysint">System</string>
    <string name="toolbar_time_str">h:mm a</string>
    <string name="toolbar_date_str">MM-dd</string>
    <string name="volume_label">Volume:</string>
    <string name="title_activity_start">StartActivity</string>
</resources>