<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_view_dashboard"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_area"
        android:icon="@drawable/ic_layers"
        android:title="@string/title_area" />

    <item
        android:id="@+id/navigation_wbb12"
        android:icon="@drawable/ic_home_thermometer"
        android:title="@string/title_wbb12" />

    <item
        android:id="@+id/navigation_sysint"
        android:icon="@drawable/ic_matrix"
        android:title="@string/title_sysint" />

</menu>